added meta tag with keywords

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="non-toxic hair color organic hair color Atlanta Sandy Springs Dunwoody Georgia natural hair color nontoxic organic hair dye haircolor salon stylist hair stylist"
     />
+    <script></script>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
