added mapping to coloring page, adjusted modal size, added neuma logo on home

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       <link href="https://fonts.googleapis.com/css?family=ABeeZee|Cabin|Mukta&display=swap" rel="stylesheet">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet"> 
 
     <title>BarryRollanStudio</title>
   </head>
